# mostro-push-server

./: .env.example  .gitignore  BACKEND_UNIFIEDPUSH.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example  deploy-fly.sh  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml
.planning/: .markdownlint.yaml  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/milestones/v1.1-phases/01-pushdispatcher-refactor-no-behaviour-change/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-VERIFICATION.md
.planning/milestones/v1.1-phases/02-post-api-notify-endpoint-with-privacy-hardening/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/02-post-api-notify-endpoint-with-privacy-hardening/: 02-02-SUMMARY.md  02-03-PLAN.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-dual-keyed-rate-limiting-and-verification-harness/: 03-01-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  SUMMARY.md
config/: trusted_mostro_pubkeys.json
docs/: IMPLEMENTATION_PHASES.md  README.md  api.md  architecture.md  configuration.md  cryptography.md  deployment.md  unifiedpush.md
docs/verification/: dispute-chat.md
src/: config.rs  main.rs  trusted_pubkeys.rs
src/api/: mod.rs  notify.rs  rate_limit.rs  routes.rs  test_support.rs
src/crypto/: mod.rs
src/nostr/: listener.rs  mod.rs
src/push/: dispatcher.rs  fcm.rs  mod.rs  unifiedpush.rs
src/store/: mod.rs
src/utils/: batching.rs  log_pubkey.rs  mod.rs
(+9 files in other folders)
