[package]
name = "mostro-push-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-rt = "2.9"

# WebSocket client for Nostr
tokio-tungstenite = "0.21"
tokio = { version = "1.35", features = ["full"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for FCM and UnifiedPush
reqwest = { version = "0.11", features = ["json"] }

# Nostr
nostr-sdk = "0.27"

# Logging
env_logger = "0.11"
log = "0.4"

# Configuration
config = "0.14"
dotenv = "0.15"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
governor = "0.6"

# Cryptography for token encryption (MIP-05 style)
blake3 = "1"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
secp256k1 = { version = "0.28", features = ["rand-std"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"

# JWT for Firebase service account authentication
jsonwebtoken = "9"

# Identifiers
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
mockito = "1.2"
